--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "tongdao_frontend",
   "dependencies": {
     "jquery": "1.10.2",
-    "jquery.placeholder": "*",
+    "jquery-placeholder": "*",
     "requirejs": "*",
     "flight": "*",
     "underscore": "*",
